refactor and fix unit tests for api, assertion and commons