@@ -1,32 +1,32 @@
 package com.theairebellion.zeus.validator.util;
+
 import com.theairebellion.zeus.validator.core.Assertion;
 import com.theairebellion.zeus.validator.core.AssertionResult;
 import com.theairebellion.zeus.validator.core.AssertionTypes;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class AssertionUtilTest {
+class AssertionUtilTest {
 
     @Test
-    void testValidate_ThrowsIfDataIsNull() {
+    void validate_throwsIfDataIsNull() {
         assertThrows(IllegalArgumentException.class, () ->
                 AssertionUtil.validate(null, Assertion.builder(String.class).build()));
     }
 
     @Test
-    void testValidate_ThrowsIfNoAssertions() {
+    void validate_throwsIfNoAssertions() {
         assertThrows(IllegalArgumentException.class, () ->
-                AssertionUtil.validate(Collections.singletonMap("key", "value")));
+                AssertionUtil.validate(Map.of("key", "value")));
     }
 
     @Test
-    void testValidate_SingleAssertionSuccess() {
-        Map<String, Object> data = Collections.singletonMap("name", "Zeus");
-        Assertion<String> assertion = Assertion.builder(String.class)
+    void validate_singleAssertionSuccess() {
+        var data = Map.of("name", "Zeus");
+        var assertion = Assertion.builder(String.class)
                 .key("name")
                 .type(AssertionTypes.IS)
                 .expected("Zeus")
@@ -35,15 +35,15 @@ public class AssertionUtilTest {
 
         var results = AssertionUtil.validate(data, assertion);
         assertEquals(1, results.size());
-        AssertionResult<?> result = results.get(0);
+        var result = results.get(0);
         assertTrue(result.isPassed());
         assertEquals("IS", result.getDescription());
     }
 
     @Test
-    void testValidate_SingleAssertionFail() {
-        Map<String, Object> data = Collections.singletonMap("age", 25);
-        Assertion<Integer> assertion = Assertion.builder(Integer.class)
+    void validate_singleAssertionFail() {
+        var data = Map.of("age", 25);
+        var assertion = Assertion.builder(Integer.class)
                 .key("age")
                 .type(AssertionTypes.GREATER_THAN)
                 .expected(30)
@@ -55,9 +55,9 @@ public class AssertionUtilTest {
     }
 
     @Test
-    void testValidate_ThrowsIfKeyNotExist() {
-        Map<String, Object> data = Collections.singletonMap("age", 25);
-        Assertion<Integer> assertion = Assertion.builder(Integer.class)
+    void validate_throwsIfKeyNotExist() {
+        var data = Map.of("age", 25);
+        var assertion = Assertion.builder(Integer.class)
                 .key("missingKey")
                 .type(AssertionTypes.IS)
                 .expected(25)
@@ -68,15 +68,15 @@ public class AssertionUtilTest {
     }
 
     @Test
-    void testValidate_ThrowsIfAssertionNull() {
+    void validate_throwsIfAssertionNull() {
         assertThrows(IllegalArgumentException.class, () ->
-                AssertionUtil.validate(Collections.emptyMap(), (Assertion<?>) null));
+                AssertionUtil.validate(Map.of(), (Assertion<?>) null));
     }
 
     @Test
-    void testValidate_ThrowsIfAssertionHasNoKey() {
-        Map<String, Object> data = Collections.singletonMap("name", "Zeus");
-        Assertion<String> assertion = Assertion.builder(String.class)
+    void validate_throwsIfAssertionHasNoKey() {
+        var data = Map.of("name", "Zeus");
+        var assertion = Assertion.builder(String.class)
                 .type(AssertionTypes.IS)
                 .expected("Zeus")
                 .soft(false)
@@ -86,9 +86,9 @@ public class AssertionUtilTest {
     }
 
     @Test
-    void testValidate_ThrowsIfAssertionHasNoType() {
-        Map<String, Object> data = Collections.singletonMap("name", "Zeus");
-        Assertion<String> assertion = Assertion.builder(String.class)
+    void validate_throwsIfAssertionHasNoType() {
+        var data = Map.of("name", "Zeus");
+        var assertion = Assertion.builder(String.class)
                 .key("name")
                 .expected("Zeus")
                 .soft(false)
@@ -98,9 +98,9 @@ public class AssertionUtilTest {
     }
 
     @Test
-    void testValidate_SupportedTypeMismatch() {
-        Map<String, Object> data = Collections.singletonMap("age", "Not a number");
-        Assertion<String> assertion = Assertion.builder(String.class)
+    void validate_supportedTypeMismatch() {
+        var data = Map.of("age", "Not a number");
+        var assertion = Assertion.builder(String.class)
                 .key("age")
                 .type(AssertionTypes.GREATER_THAN)
                 .expected("anything")
@@ -111,11 +111,8 @@ public class AssertionUtilTest {
     }
 
     @Test
-    void testValidate_MultipleAssertionsSuccess() {
-        Map<String, Object> data = Map.of(
-                "name", "Zeus",
-                "age", 1000
-        );
+    void validate_multipleAssertionsSuccess() {
+        var data = Map.of("name", "Zeus", "age", 1000);
 
         var assertion1 = Assertion.builder(String.class)
                 .key("name")
@@ -133,14 +130,13 @@ public class AssertionUtilTest {
 
         var results = AssertionUtil.validate(data, assertion1, assertion2);
         assertEquals(2, results.size());
-        assertTrue(results.get(0).isPassed());
-        assertTrue(results.get(1).isPassed());
+        assertTrue(results.stream().allMatch(AssertionResult::isPassed));
         assertTrue(results.get(1).isSoft());
     }
 
     @Test
-    void testValidate_SoftAssertionFail() {
-        Map<String, Object> data = Map.of("score", 50);
+    void validate_softAssertionFail() {
+        var data = Map.of("score", 50);
         var assertion = Assertion.builder(Integer.class)
                 .key("score")
                 .type(AssertionTypes.GREATER_THAN)
